Got the DFSPHGPU compiling as well now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,8 @@ ExternalProject_Add(
    Ext_Discregrid
    PREFIX "${CMAKE_SOURCE_DIR}/extern/Discregrid"
    GIT_REPOSITORY https://github.com/InteractiveComputerGraphics/Discregrid.git
-   GIT_TAG "c0fb5aeac4c8a83e9f37c720315f13a834409b81"
+   #GIT_TAG "c0fb5aeac4c8a83e9f37c720315f13a834409b81"
+   GIT_TAG "c992835894e32427f9d4d7262f301df7454150c9"
    INSTALL_DIR ${ExternalInstallDir}/Discregrid
    CMAKE_ARGS -DCMAKE_BUILD_TYPE:STRING=${EXT_CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX:PATH=${ExternalInstallDir}/Discregrid -DBUILD_CMD_EXECUTABLE:BOOL=0 -DEIGEN3_INCLUDE_DIR:PATH=${EIGEN3_INCLUDE_DIR}
 ) 
