- Run Actions on push

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -2,7 +2,7 @@ name: build-linux
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, fix-ci-linux ]
   pull_request:
     branches: [ master ]
 
