--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,7 +2,7 @@ name: build-windows
 
 on:
   push:
-    branches: [ master, update-ci-python ]
+    branches: [ master ]
 
 jobs:
   build-windows:
@@ -68,8 +68,8 @@ jobs:
       if: always()
 
     # Upload wheel to pypi
-    # - name: Upload wheel to pypi
-    #   env:
-    #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-    #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-    #   run: twine upload build/dist/* --skip-existing
+    - name: Upload wheel to pypi
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: twine upload build/dist/* --skip-existing
