--- a/_config.yml
+++ b/_config.yml
@@ -22,17 +22,19 @@ title: SPlisHSPlasH
 description: >- # this means to ignore newlines until "baseurl:"
   Web page of the SPlisHSPlasH simulation library
 baseurl: "" # the subpath of your site, e.g. /blog
-url: http://localhost:4000 # the base hostname & protocol for your site, e.g. http://example.com
+url: https://interactivecomputergraphics.github.io/SPlisHSPlasH/ # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
+#theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes
 
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-#plugins:
-#  - jekyll-feed
+plugins:
+  - jekyll-feed
+  - jekyll-include-cache
 
 title                    : "SPlisHSPlasH"
 title_separator          : "-"
