--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: https://interactivecomputergraphics.github.io/SPlisHSPlasH/ # the base host
 #github_username:  jekyll
 
 # Build settings
-#theme: minimal-mistakes-jekyll
+theme: minimal-mistakes-jekyll
 remote_theme: mmistakes/minimal-mistakes
 
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
