--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@
 title: SPlisHSPlasH
 description: >- # this means to ignore newlines until "baseurl:"
   Web page of the SPlisHSPlasH simulation library
-baseurl: "" # the subpath of your site, e.g. /blog
-url: https://interactivecomputergraphics.github.io/SPlisHSPlasH/ # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/SPlisHSPlasH" # the subpath of your site, e.g. /blog
+url: https://interactivecomputergraphics.github.io # the base hostname & protocol for your site, e.g. http://example.com
+canonical_url: "https://splishsplash.physics-simulation.org/"
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
