--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: SPlisHSPlasH
 description: >- # this means to ignore newlines until "baseurl:"
   Web page of the SPlisHSPlasH simulation library
-baseurl: "/SPlisHSPlasH" # the subpath of your site, e.g. /blog
-url: https://interactivecomputergraphics.github.io # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://splishsplash.physics-simulation.org/" # the base hostname & protocol for your site, e.g. http://example.com
 canonical_url: "https://splishsplash.physics-simulation.org/"
 #twitter_username: jekyllrb
 #github_username:  jekyll
@@ -40,8 +40,6 @@ plugins:
 title                    : "SPlisHSPlasH"
 title_separator          : "-"
 subtitle                 : "SPH simulation of fluids and solids"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/InteractiveComputerGraphics/SPlisHSPlasH"
 #teaser                   : "/images/SPlisHSPlasH.png"
 #logo                     : "/images/logo_small.jpg"
