--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: SPlisHSPlasH
 description: >- # this means to ignore newlines until "baseurl:"
   Web page of the SPlisHSPlasH simulation library
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://splishsplash.physics-simulation.org/" # the base hostname & protocol for your site, e.g. http://example.com
-canonical_url: "https://splishsplash.physics-simulation.org"
+url: "https://splishsplash.physics-simulation.org" # the base hostname & protocol for your site, e.g. http://example.com
+#canonical_url: "https://splishsplash.physics-simulation.org"
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
