--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: SPlisHSPlasH
-description: >- # this means to ignore newlines until "baseurl:"
-  Web page of the SPlisHSPlasH simulation library
+description: "SPlisHSPlasH - An open-source library for the SPH simulation of fluids and solids"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://splishsplash.physics-simulation.org" # the base hostname & protocol for your site, e.g. http://example.com
 canonical_url: "https://splishsplash.physics-simulation.org"
@@ -32,12 +30,6 @@ canonical_url: "https://splishsplash.physics-simulation.org"
 remote_theme: mmistakes/minimal-mistakes
 
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
-plugins:
-  - jekyll-feed
-  - jekyll-include-cache
-  - jekyll-paginate
-  - jekyll-sitemap
 
 title                    : "SPlisHSPlasH"
 title_separator          : "-"
@@ -59,7 +51,7 @@ atom_feed:
   hide: true
 
 include:
-#  - .htaccess
+  - .htaccess
   - _pages
 exclude:
   - "*.sublime-project"
@@ -93,6 +85,23 @@ keep_files:
   - .svn
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
 
 
 # HTML Compression
