- updated pybind11 - added avx implementation of the paper Peer et al., "An implicit SPH formulation for incompressible linearly elastic solids", Computer Graphics Forum, 2018 - bugfixes

--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,6 +1,12 @@
 include(GetGitRevisionDescription)
 get_git_head_revision(GIT_REFSPEC GIT_SHA1)
 git_local_changes(GIT_LOCAL_CHANGES)
+if (DL_OUTPUT)
+	git_local_diff(GIT_LOCAL_DIFF)
+
+	# Write the output to a file in the binary directory
+	file(WRITE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/git_diff.txt "${GIT_LOCAL_DIFF}")
+endif()
 if (${GIT_LOCAL_CHANGES} STREQUAL "DIRTY")
 	set(COMPILER_MESSAGE "#pragma WARNING(Local changes not committed.)")
 endif()
