- updated pybind11 to version 3.0.0 - updated zlib to version 1.3.1 - updated CMake files

--- a/extern/zlib/CMakeLists.txt
+++ b/extern/zlib/CMakeLists.txt
@@ -5,7 +5,11 @@ add_library(zlib STATIC
 	src/crc32.h
 	src/deflate.c
 	src/deflate.h
-	src/gzio.c
+	src/gzclose.c
+	src/gzguts.h
+    src/gzlib.c
+    src/gzread.c
+    src/gzwrite.c
 	src/infback.c
 	src/inffast.c
 	src/inffast.h
