--- a/.github/workflows/build-linux-wheels.yml
+++ b/.github/workflows/build-linux-wheels.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-manylinux-python:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["cp38-manylinux_x86_64", "cp39-manylinux_x86_64", "cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64",  "cp313-manylinux_x86_64"]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,8 +28,8 @@ jobs:
       - name: Build manylinux wheels with cibuildwheel
         env:
           # Target CPython versions (align with former matrix)
-        #   CIBW_BUILD: "cp37-manylinux_x86_64 cp38-manylinux_x86_64 cp39-manylinux_x86_64 cp310-manylinux_x86_64"
-          CIBW_BUILD: "cp310-manylinux_x86_64"
+          CIBW_BUILD: ${{ matrix.python-version }}
+        #   CIBW_BUILD: "cp310-manylinux_x86_64"
           # Skip PyPy & musllinux for now
           CIBW_SKIP: "pp* *musllinux*"
           # Install system deps (runs inside manylinux container)
@@ -34,7 +37,8 @@ jobs:
             yum install -y epel-release &&
             yum install -y cmake3 libXrandr-devel libXinerama-devel libXcursor-devel libXi-devel mesa-libGLU-devel
           # Provide flags similar to prior pip-wheel-args (handled via env; setup.py could be adapted to read these)
-          EXTRA_CMAKE_DEFINES: "-DUSE_AVX=Off -DCI_BUILD=On"
+        #   EXTRA_CMAKE_DEFINES: "-DUSE_AVX=Off -DCI_BUILD=On"
+          EXTRA_CMAKE_DEFINES: "-DUSE_AVX=On -DCI_BUILD=On"
           # Verbosity
           CIBW_BUILD_VERBOSITY: "1"
         run: |
