--- a/.github/workflows/build-linux-wheels.yml
+++ b/.github/workflows/build-linux-wheels.yml
@@ -2,7 +2,7 @@ name: build-linux-wheels
 
 on:
   push:
-    branches: [ master, fix-macos ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
