--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -39,8 +39,10 @@ jobs:
           EXTRA_CMAKE_DEFINES: "-DUSE_AVX=On"
           # Ensure libomp from Homebrew is visible inside cibuildwheel build env
           # This block is executed in a shell for each build by cibuildwheel.
+          CIBW_BEFORE_BUILD: >-
+            brew install libomp
           CIBW_ENVIRONMENT_MACOS: >-
-            CMAKE_PREFIX_PATH=$(brew --prefix libomp)
+            CMAKE_PREFIX_PATH="$(brew --prefix libomp)"
         run: |
           python -m cibuildwheel --output-dir wheelhouse
 
