--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -39,10 +39,10 @@ jobs:
           EXTRA_CMAKE_DEFINES: "-DUSE_AVX=On"
           # Ensure libomp from Homebrew is visible inside cibuildwheel build env
           # This block is executed in a shell for each build by cibuildwheel.
-          CIBW_BEFORE_BUILD: >-
-            brew install libomp && ls -a /opt/homebrew/opt/libomp/
+          # CIBW_BEFORE_BUILD: >-
+            # brew install libomp && ls -a /opt/homebrew/opt/libomp/
           CIBW_ENVIRONMENT_MACOS: >-
-            LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" MACOSX_DEPLOYMENT_TARGET=10.13
+            LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" MACOSX_DEPLOYMENT_TARGET="10.13"
         run: |
           python -m cibuildwheel --output-dir wheelhouse
 
