--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        # python-version: ["cp38-macosx_arm64", "cp39-macosx_arm64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64",  "cp313-macosx_arm64"]
-        python-version: ["cp39-macosx_arm64"]
+        python-version: ["cp38-macosx_arm64", "cp39-macosx_arm64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64",  "cp313-macosx_arm64"]
+        # python-version: ["cp39-macosx_arm64"]
 
     steps:
       - uses: actions/checkout@v4
