--- a/.github/workflows/build-windows-wheels.yml
+++ b/.github/workflows/build-windows-wheels.yml
@@ -2,16 +2,16 @@ name: build-windows-wheels
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, fix-macos ]
 
 jobs:
   # Build the python wheel in parallel
   build-windows-wheels:
     runs-on: windows-latest
-    # strategy:
-      # matrix:
+    strategy:
+      matrix:
         # python-version: [3.7]
-        # python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['cp38-win_amd64', 'cp39-win_amd64', 'cp310-win_amd64', 'cp311-win_amd64', 'cp312-win_amd64', 'cp313-win_amd64']
 
     steps:
     # Checkout repo
@@ -33,6 +33,7 @@ jobs:
         EXTRA_CMAKE_DEFINES: "-DUSE_AVX=On"
         # Verbosity
         CIBW_BUILD_VERBOSITY: "1"
+        CIBW_BUILD: ${{matrix.python-version}}
       run: |
         # If needed, adapt setup.py to consume EXTRA_CMAKE_DEFINES; for now rely on defaults.
         python -m cibuildwheel --output-dir wheelhouse
