correctly name wheel files

--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Upload wheels artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pysplishsplash
+          name: pysplishsplash-${{matrix.python-version}}
           path: wheelhouse
         if: always()
 
