--- a/.github/workflows/build-linux-wheels.yml
+++ b/.github/workflows/build-linux-wheels.yml
@@ -2,13 +2,14 @@ name: build-linux-wheels
 
 on:
   push:
-    branches: [ master, fix-macos ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
   build-manylinux-python:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["cp38-manylinux_x86_64", "cp39-manylinux_x86_64", "cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64",  "cp313-manylinux_x86_64"]
 
