--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -9,9 +9,10 @@ jobs:
   build-mac-python:
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["cp38-macosx_arm64", "cp39-macosx_arm64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64",  "cp313-macosx_arm64"]
-        # python-version: ["cp39-macosx_arm64"]
+        # python-version: ["cp38-macosx_arm64", "cp39-macosx_arm64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64",  "cp313-macosx_arm64"]
+        python-version: ["cp39-macosx_arm64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64",  "cp313-macosx_arm64"]
 
     steps:
       - uses: actions/checkout@v4
@@ -42,7 +43,7 @@ jobs:
           # CIBW_BEFORE_BUILD: >-
             # brew install libomp && ls -a /opt/homebrew/opt/libomp/
           CIBW_ENVIRONMENT_MACOS: >-
-            LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" MACOSX_DEPLOYMENT_TARGET="14.0"
+            MACOSX_DEPLOYMENT_TARGET="14.0"
         run: |
           python -m cibuildwheel --output-dir wheelhouse
 
