--- a/.github/workflows/build-mac-wheels.yml
+++ b/.github/workflows/build-mac-wheels.yml
@@ -2,8 +2,7 @@ name: build-mac-wheels
 
 on:
   push:
-    branches: [ master, fix-macos ]
-  workflow_dispatch:
+    branches: [ ]
 
 jobs:
   build-mac-python:
@@ -54,10 +53,10 @@ jobs:
           path: wheelhouse
         if: always()
 
-    #   - name: Publish wheels to PyPI
-    #     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    #     env:
-    #       TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-    #       TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-    #     run: |
-    #       twine upload wheelhouse/*-manylinux*.whl --skip-existing
+      - name: Publish wheels to PyPI
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          twine upload wheelhouse/*.whl --skip-existing
